# financial-intelligence

./: .env.example  .gitignore  README.md  ideas.md  pyproject.toml  requirements-dev.txt  requirements.txt
app/: __init__.py  main.py  schemas.py
app/api/: routes.py
app/connectors/: __init__.py  base.py  sec.py  wikidata.py
app/core/: config.py
app/db/: models.py
app/services/: intelligence.py  seed.py
tests/: test_api.py
