[project]
name = "stock-intelligence"
version = "0.1.0"
description = "Financial Intelligence Platform API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.7.0",
    "sqlalchemy>=2.0.0",
    "uvicorn[standard]>=0.34.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28.0",
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
